# ESP32

./: .clang-format  .gdbinit  .gitignore  .gitmodules  .openocd_setup.ps1  CMakeLists.txt  README.md  create_release_zip.ps1  create_release_zip.sh  db.json  db_params.csv  dronebridge_esp32_flasher.js  flashing_instructions.txt  imprint.html  index.html  install.html  package-lock.json  package.json  partitions.csv  routes.json  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old  sdkconfig_c3  sdkconfig_c3_noUARTConsole  sdkconfig_c3_official  sdkconfig_c3_serial_via_JTAG  sdkconfig_c6  sdkconfig_c6_noUARTConsole  sdkconfig_c6_official  sdkconfig_c6_official_noUARTConsole  sdkconfig_c6_official_serial_via_JTAG  sdkconfig_c6_serial_via_JTAG  sdkconfig_esp32  sdkconfig_esp32_noUARTConsole  sdkconfig_s2  sdkconfig_s2_noUARTConsole  sdkconfig_s3  sdkconfig_s3_noUARTConsole  (+2 more)
main/: CMakeLists.txt  Kconfig.projbuild  db_ble.c  db_ble.h  db_ble_bluedroid.c  db_bluetooth.c  db_bluetooth.h  db_comm.c  db_comm.h  db_comm_protocol.h  db_crc.c  db_crc.h  db_esp32_comm.c  db_esp32_comm.h  db_esp32_control.c  db_esp32_control.h  db_esp32_settings.h  db_esp_now.c  db_esp_now.h  db_led_indicator.c  db_led_indicator.h  db_led_strip.c  db_led_strip.h  db_mavlink_msgs.c  db_mavlink_msgs.h  db_parameters.c  db_parameters.h  db_protocol.h  db_queue.c  db_queue.h  db_serial.c  db_serial.h  db_timers.c  db_timers.h  globals.h  http_server.c  http_server.h  http_server_new.c  idf_component.yml  main.c  (+10 more)
main/mav_c_lib_v2/: fastmavlink_config.h
main/mav_c_lib_v2/common/: mavlink_msg_actuator_output_status.h  mavlink_msg_altitude.h  mavlink_msg_attitude_quaternion_cov.h  (+45 more)
(+281 files in other folders)
